--- a/settings.gradle
+++ b/settings.gradle
@@ -1,26 +1,18 @@
 pluginManagement {
     repositories {
-        google {
-            content {
-                includeGroupByRegex("com\\.android.*")
-                includeGroupByRegex("com\\.google.*")
-                includeGroupByRegex("androidx.*")
-            }
-        }
+        google()
         mavenCentral()
         gradlePluginPortal()
     }
 }
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
-        // ADD THESE MISSING REPOSITORIES HERE:
-        maven { url 'https://jitpack.io' }
-        // maven { url 'https://maven.google.com' } // This one is usually not needed as google() covers it
     }
 }
 
 rootProject.name = "ChefBot"
-include ':app'
+include(":app")
