--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     namespace 'com.example.chefbot'
-    compileSdk 34   // ✅ STABLE
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.chefbot"
@@ -18,26 +18,21 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile(
-                    'proguard-android-optimize.txt'),
-                    'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-
-    // Android Core (JAVA)
-    implementation 'androidx.core:core:1.12.0'
+    // Basic Android
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.cardview:cardview:1.0.0'
 
-    // Firebase
-    implementation platform('com.google.firebase:firebase-bom:33.6.0')
-    implementation 'com.google.firebase:firebase-firestore'
+    // Firebase (SIMPLE VERSION - remove duplicates)
     implementation 'com.google.firebase:firebase-firestore:24.10.0'
-    // Testing
+    implementation 'com.google.firebase:firebase-auth:22.3.0'
+
     testImplementation 'junit:junit:4.13.2'
 }
