--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.chefbot">
-
     <!-- INTERNET PERMISSION ADD KARO -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -11,33 +10,28 @@
         android:icon="@mipmap/ic_launcher"
         android:label="ChefBot"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
-        <!-- Splash Activity -->
+        <activity
+            android:name=".temp"
+            android:exported="false" />
         <activity
             android:name=".SplashActivity"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- Main Activity -->
+        </activity> <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
-            android:exported="false" />
-
-        <!-- Recipe Activity -->
+            android:exported="false" /> <!-- Recipe Activity -->
         <activity
             android:name=".RecipeActivity"
-            android:exported="false" />
-
-        <!-- Favorites Activity -->
+            android:exported="false" /> <!-- Favorites Activity -->
         <activity
             android:name=".FavoritesActivity"
             android:exported="false" />
-
     </application>
 
 </manifest>
